[package]
name = "luhack_badge"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloc-cortex-m = "0.4.3"
cichlid = { git = "https://github.com/simmsb/cichlid.git", version = "0.2.1", features = [
  "no-std",
  "nightly",
] }
cordic = { git = "https://github.com/simmsb/cordic" }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.2"
cortex-m-rtic = "1.1.3"
defmt = "0.3.2"
defmt-rtt = { version = "0.4", optional = true }
derive_more = "0.99.17"
display-interface = "0.4.1"
display-interface-spi = "0.4.1"
eh_0_2 = { version = "0.2.7", package = "embedded-hal" }
embedded-graphics = "0.7.1"
embedded-hal = "=1.0.0-alpha.8"
euc = { git = "https://github.com/simmsb/euc", branch = "refactor", default-features = false, features = [
"libm" # only needed so it compiles
] }
# euc = { path = "../euc/", default-features = false, features = [
# "libm"
# ] }
fixed = { version = "=2.0.0-alpha.7", features = ["num-traits"] }
fnv = { version = "1.0.7", default-features = false }
fugit = "0.3.6"
futures = { version = "0.3.25", default-features = false }
genawaiter = { git = "https://github.com/simmsb/genawaiter", default-features = false }
heapless = { version = "0.7.16", features = ["serde"] }
higher-order-closure = "0.0.5"
micromath = "2.0.0"
mipidsi = "0.5.0"
nb = "1.0.0"
noline = { git = "https://github.com/simmsb/noline", features = ["embedded"] }
once_cell = { version = "1.16.0", default-features = false, features = ["atomic-polyfill", "race"] }
panic-probe = { version = "0.3.0", features = [
  "defmt",
  "print-defmt",
], optional = true }
panic-reset = { version = "0.1.1", optional = true }
phf = { version = "0.11.1", default-features = false, features = ["macros", "uncased"] }
pio = "0.2.0"
pio-proc = "0.2.1"
postcard = { version = "1.0.2", features = ["experimental-derive"] }
rp-pico = "0.5.0"
rp2040-hal = { version = "0.6.1", features = ["rt", "eh1_0_alpha", "defmt"] }
rp2040-monotonic = "=1.1.0"
serde = { version = "1.0.149", features = ["derive"], default-features = false }
smart-leds = "0.3.0"
static_cell = "1.0.0"
tinybmp = "0.4.0"
uncased = { version = "0.9.7", default-features = false }
usb-device = "0.2.9"
usbd-serial = "0.1.1"
vek = { version = "0.15.9", default-features = false, features = ["rgba"] }
ws2812-pio = "0.4.0"

[features]
debugger = ["panic-probe", "defmt-rtt"]
no-debugger = ["panic-reset"]
default = ["debugger"]

#[patch.crates-io]
#num-traits = { git = "https://github.com/simmsb/num-traits" }

[profile.dev.package."fixed"]
debug-assertions = false

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 1           # <-
overflow-checks = false  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 0
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-
